--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   flutter_slidable: ^3.1.1
   get_storage: ^2.1.1
-
+  badges: ^3.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
