--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_slidable: ^3.1.1
   get_storage: ^2.1.1
   badges: ^3.1.2
+  logger: ^2.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
