--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   get_storage: ^2.1.1
   badges: ^3.1.2
   logger: ^2.5.0
+  json_annotation: ^4.9.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -96,4 +97,4 @@ flutter_native_splash:
     image: "assets/system/logo_circle.png" # replace with your splash screen image path
     icon_background_color: "#ffffff" # replace with your background color
 
-  ios: true          
+  ios: true
