--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   logger: ^2.5.0
   json_annotation: ^4.9.0
   connectivity_plus: ^5.0.2
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
